--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.2.5
   glassmorphism_ui: ^0.3.0
   gap: ^3.0.1
+  flutter_neumorphic_plus: ^3.3.0
 
 dev_dependencies:
   flutter_test:
