--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
+  sdk: ^3.5.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,17 +34,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  flutter_screenutil: ^5.9.0
-  lottie: ^3.1.0
-  responsive_builder: ^0.7.0
-  marquee: ^2.2.3
-  google_fonts: ^6.2.1
-  font_awesome_flutter: ^10.7.0
-  url_launcher: ^6.2.5
-  glassmorphism_ui: ^0.3.0
+  cupertino_icons: ^1.0.8
+  responsive_builder: ^0.7.1
+  flutter_screenutil: ^5.9.3
   gap: ^3.0.1
-  flutter_neumorphic_plus: ^3.3.0
+  glassmorphism_ui: ^0.3.0
+  font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
+  url_launcher: ^6.3.0
+  lottie: ^3.1.2
+  text_marquee: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -72,13 +71,12 @@ flutter:
   assets:
     - assets/json/
     - assets/photos/
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  # https://flutter.dev/to/asset-from-package
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -98,4 +96,4 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # see https://flutter.dev/to/font-from-package
