--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   google_fonts: ^6.2.1
   url_launcher: ^6.3.0
   lottie: ^3.1.2
-  text_marquee: ^0.0.2
+  marquee_list: ^1.0.0
 
 dev_dependencies:
   flutter_test:
