project details page decoration

--- a/assets/json/project_data.json
+++ b/assets/json/project_data.json
@@ -6,7 +6,7 @@
          "shortDescription":"Diagnostic Center App",
          "features":"•Authentication  •FCM Push Notification  •Patients Information  •Patient Registration  •Medical Reports  •Social Communication (Post, like, Comment)",
          "tools":"•Provider State Management, •Firebase for notification",
-         "link":"https://play.google.com/store/apps/details?id=com.edmcbd.edmc"
+         "url":"https://play.google.com/store/apps/details?id=com.edmcbd.edmc"
      },
      {
          "title":"DAL Attendance",
@@ -14,7 +14,7 @@
          "shortDescription":"Automatic Attendance App",
          "features":"•Automatic Attendance System",
          "tools":"•Network Status Change Detection  •Flutter Foreground Service",
-         "link":"https://play.google.com/store/apps/details?id=com.dhakaapps.attendance"
+         "url":"https://play.google.com/store/apps/details?id=com.dhakaapps.attendance"
      },
      {
          "title":"E-Relatives",
@@ -22,7 +22,7 @@
          "shortDescription":"Online Medical Services App",
          "features":"•Blood Donation Request  •Medical Test Request •Subscription  •Medicine and Health Product Purchase (e-commerce) •Ambulance Request  •Doctor Appointment",
          "tools":"•Provider State Management •Firebase for Push Notification",
-         "link":"https://play.google.com/store/apps/details?id=com.e_relatives.app"
+         "url":"https://play.google.com/store/apps/details?id=com.e_relatives.app"
      }
     ]
   }
