--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   marquee_list: ^1.0.0
   particles_fly: ^0.0.9
   syncfusion_flutter_pdfviewer: ^27.1.56
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
