ui for packageS

--- a/assets/json/project_data.json
+++ b/assets/json/project_data.json
@@ -1,5 +1,5 @@
 {
-    "data": [
+    "projects": [
         {
             "title":"Al Hamad Medical Center App",
             "image":"assets/photos/projects/al_hamad_banner.png",
