--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/json/
     - assets/photos/
     - assets/photos/projects/
+    - assets/photos/packages/
     - assets/pdf/
 
   # An image asset can refer to one or more resolution-specific "variants", see
