--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: portfolio
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,13 +38,13 @@ dependencies:
   flutter_screenutil: ^5.9.3
   gap: ^3.0.1
   glassmorphism_ui: ^0.3.0
-  font_awesome_flutter: ^10.7.0
+  font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
-  url_launcher: ^6.3.0
-  lottie: ^3.1.2
+  url_launcher: ^6.3.1
+  lottie: ^3.3.0
   marquee_list: ^1.0.0
   particles_fly: ^0.0.9
-  syncfusion_flutter_pdfviewer: ^27.1.56
+  syncfusion_flutter_pdfviewer: ^28.1.36
   universal_html: ^2.2.4
 
 dev_dependencies:
@@ -57,14 +56,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
